fixed overflow errors

--- a/static/css/layout.scss
+++ b/static/css/layout.scss
@@ -145,6 +145,7 @@ nav{
         }
 
         #username{
+            white-space: nowrap;
             line-height: 3;
         }
     }
